--- a/index.html
+++ b/index.html
@@ -6,13 +6,41 @@
   <meta charset="utf-8">
   <title>Work In Progress</title>
 
+  <style>
+    span{
+      color:whitesmoke;
+      font-size: 5vw;
+      float: left;
+      width: 100%;
+    }
+    body{
+      background-color: rgb(27, 27, 27);
+    }
+
+    .tenor-gif-embed{
+      float:left;
+    }
+  </style>
+
 </head>
 
 <body>
-  <span style="font-size: 100;" > <bold>Work in progress ...</bold></span>
+  <span> <bold>Work in progress ...</bold></span>
   <div class="tenor-gif-embed" data-postid="17585515" data-share-method="host" data-aspect-ratio="1.33333"
-    data-width="100%"><a href="https://tenor.com/view/typing-anime-cat-kitty-cute-gif-17585515">Typing Anime GIF</a>from
+    data-width="25%"><a href="https://tenor.com/view/typing-anime-cat-kitty-cute-gif-17585515">Typing Anime GIF</a>from
     <a href="https://tenor.com/search/typing-gifs">Typing GIFs</a></div>
+  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="tenor-gif-embed" data-postid="17794715" data-share-method="host" data-aspect-ratio="1.77778"
+    data-width="25%"><a href="https://tenor.com/view/anime-hacking-keyboard-typing-fast-typing-gif-17794715">Anime
+      Hacking GIF</a>from <a href="https://tenor.com/search/anime-gifs">Anime GIFs</a></div>
+  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="tenor-gif-embed" data-postid="21599707" data-share-method="host" data-aspect-ratio="1" data-width="25%"><a
+      href="https://tenor.com/view/coding-typing-pc-laptop-power-gif-21599707">Coding Typing GIF</a>from <a
+      href="https://tenor.com/search/coding-gifs">Coding GIFs</a></div>
+  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="tenor-gif-embed" data-postid="18079157" data-share-method="host" data-aspect-ratio="1.97531"
+    data-width="25%"><a href="https://tenor.com/view/working-retsuko-aggretsuko-typing-smiling-gif-18079157">Working
+      Retsuko GIF</a>from <a href="https://tenor.com/search/working-gifs">Working GIFs</a></div>
   <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body>
 </html>
