--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta name="author" content="Yoann Renard">
+  <link rel="icon" href="./res/icons/fox_icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Work In Progress</title>
