--- a/projects/index.html
+++ b/projects/index.html
@@ -6,27 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Work In Progress</title>
-
-  <style>
-    span{
-      color:whitesmoke;
-      font-size: 5vw;
-      float: left;
-      width: 100%;
-    }
-    body{
-      background-color: rgb(27, 27, 27);
-    }
-
-    .tenor-gif-embed{
-      float:left;
-    }
-  </style>
+  <link rel="stylesheet" href="../src/stylesheets/css/parallax.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
 </head>
 
 <body>
-  <span> <bold>Projects index</bold></span>
+    <div class="container">
+    <section class="background">
+        <div class="content-wrapper">
+        <p class="content-title">Full Page Parallax Effect</p>
+        <p class="content-subtitle">Scroll down and up to see the effect!</p>
+        </div>
+    </section>
+    <section class="background">
+        <div class="content-wrapper">
+        <p class="content-title">Cras lacinia non eros nec semper.</p>
+        <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+        </div>
+    </section>
+    <section class="background">
+        <div class="content-wrapper">
+        <p class="content-title">Etiam consequat lectus.</p>
+        <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+        </div>
+    </section>
+    </div>
 
+    <script src="../src/scripts/parallax.js"></script>
 </body>
 </html>
