fix attempt where made

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta name="author" content="Yoann Renard">
   <link rel="icon" href="../res/icons/fox_icon.png">
@@ -16,20 +16,20 @@
     <div class="container">
     <section class="background">
         <div class="content-wrapper">
-        <p class="content-title">Full Page Parallax Effect</p>
-        <p class="content-subtitle">Scroll down and up to see the effect!</p>
+            <p class="content-title">Full Page Parallax Effect</p>
+            <p class="content-subtitle">Scroll down and up to see the effect!</p>
         </div>
     </section>
     <section class="background">
         <div class="content-wrapper">
-        <p class="content-title">Cras lacinia non eros nec semper.</p>
-        <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+            <p class="content-title">Cras lacinia non eros nec semper.</p>
+            <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
         </div>
     </section>
     <section class="background">
         <div class="content-wrapper">
-        <p class="content-title">Etiam consequat lectus.</p>
-        <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+            <p class="content-title">Etiam consequat lectus.</p>
+            <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
         </div>
     </section>
     </div>
