--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
     }
     img{
       position: absolute;
-      width: 700px;
+      width: 60vw;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-30vw);
     }
   </style>
 </head>
