--- a/projects/index.html
+++ b/projects/index.html
@@ -34,6 +34,6 @@
     </section>
     </div>
 
-    <script src="../src/scripts/parallax.js" type="module"></script>
+    <script src="../src/scripts/js/parallax.js" type="module"></script>
 </body>
 </html>
